examples/test/testpolicy15209.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15209
  namespace: namespace16
spec:
  podSelector:
    matchLabels:
      key20: value39
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key25: value8
          key30: value39
      podSelector:
        matchLabels:
          key24: value19
          key35: value13
